# aurum

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .schemathesis.yaml  .schemathesis.yml  .security-exceptions.yml  .spectral.yaml  .spectral.yml  .sqlfluff  .yamllint.yaml  CANARY_DEPLOYMENT_README.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.api.backup  Dockerfile.collectors  Dockerfile.external  Dockerfile.mock_provider  Dockerfile.worker  EXTERNAL_DATA_INGESTION_README.md  MIGRATION_README.md  Makefile  README.md  README.md.backup  REFACTOR_SUMMARY.md  ROADMAP_EXECUTIVE_SUMMARY.md  SANDBOX_README.md  airflow.md  alembic.ini  api_simplification_demo.py  api_usage_guide.md  architecture-overview.md  aurum-developer-documentation.md  cicd_improvements_demo.py  config_consolidation_demo.py  configuration.md  coverage.xml  data-contracts.md  data_dictionary.md  dbt_project.yml  (+37 more)
.github/: README.md
api/: api-docs.md  external.md  openapi-spec.html  openapi-spec.json  openapi.generated.yaml
apps/: __init__.py
artifacts/: EOD_EUGP_20250729_1430.xlsx  eia_catalog_report.json
auth/: api-auth.md  oidc-forward-auth.md
clickhouse/: ddl_ops.sql
compose/: README.md  docker-compose.dev.yml  docker-compose.integration.yml
config/: airflow_variables.json  calendars.yml  cpi_catalog.json  cpi_ingest_datasets.json  cpi_ingest_datasets.schema.json  data_source_quotas.json  dlq_schema_config.json  droughtgov_catalog.json  eia_bulk_datasets.json  eia_catalog.json  eia_ingest_datasets.generated.json  eia_ingest_datasets.json  eia_ingest_datasets.schema.json  eia_ingest_overrides.json  environment_template.env  external_backfill_config.json  external_incremental_config.json  external_monitoring_config.json  fred_catalog.json  fred_ingest_datasets.json  fred_ingest_datasets.schema.json  grafana_dashboards.json  iso_catalog.json  iso_dynamic_dag.sample.json  iso_ingest_datasets.json  iso_ingest_datasets.schema.json  iso_nodes.csv  isone_ingest_datasets.json  kafka_lake_reconciliation.json  kafka_topics.json  kafka_topics.kind.json  miso_ingest_datasets.json  noaa_ingest_datasets.json  noaa_ingest_datasets_expanded.json  noaa_station_discovery_summary.json  noaa_stations_expanded.csv  openlineage_config.json  sandbox_config.json  superset_dashboards.json  trino_query_harness.json  (+1 more)
constraints/: dev.txt
docs/: CODEMAP.md  ENHANCED_ARCHITECTURE.md  README.md  airflow-setup.md  airflow-variables.md  async_dao_pattern.md  aurum-developer-documentation.md  backfill_driver.md  cache-unification-summary.md  canary_monitoring.md  codebase-analysis-summary.md  configuration.md  cost_profiler.md  data-contracts.md  data_quality_assertions.md  development-roadmap-2024.md  development-roadmap-quick-reference.md  external-data.md  external_contracts.md  feature-flags.md  k8s-dev.md  migration-guide.md  next-development-steps.md  onboarding.md  pagination.md  phase1-implementation-summary.md  platform-reliability-security-cost-optimization.md  refactor-implementation-guide.md  refactor-plan.md  refactor-task-summary.md  refactor-tasks-analysis.md  roadmap-implementation-guide.md  roadmap-ingestion-scenarios.md  roadmap-metrics-dashboard.md  scenarios.md  schema_registry.md  structured_logging_guide.md  test_fixtures.md  testing-fast-local.md  v1-split-flags.md
examples/: app_startup_integration.py  async_dao_mock_demo.py  async_dao_usage.py  cache_migration_example.py  canary_deployment_example.py  dao_migration_example.py  enhanced_api_example.py
files/: EOD_EUGP_20250212_1430.xlsx  EOD_EUGP_20250213_1430.xlsx  EOD_EUGP_20250214_1430.xlsx  EOD_EUGP_20250218_1430.xlsx  EOD_EUGP_20250219_1430.xlsx  EOD_EUGP_20250220_1430.xlsx  EOD_EUGP_20250224_1430.xlsx  EOD_EUGP_20250225_1430.xlsx  EOD_EUGP_20250226_1430.xlsx  EOD_EUGP_20250227_1430.xlsx  EOD_EUGP_20250228_1430.xlsx  EOD_EUGP_20250701_1430.xlsx  EOD_EUGP_20250702_1430.xlsx  EOD_EUGP_20250703_1430.xlsx  EOD_EUGP_20250707_1430.xlsx  EOD_EUGP_20250708_1430.xlsx  EOD_EUGP_20250709_1430.xlsx  EOD_EUGP_20250710_1430.xlsx  EOD_EUGP_20250711_1430.xlsx  EOD_EUGP_20250714_1430.xlsx  EOD_EUGP_20250715_1430.xlsx  EOD_EUGP_20250716_1430.xlsx  EOD_EUGP_20250717_1430.xlsx  EOD_EUGP_20250718_1430.xlsx  EOD_EUGP_20250721_1430.xlsx  EOD_EUGP_20250722_1430.xlsx  EOD_EUGP_20250723_1430.xlsx  EOD_EUGP_20250724_1430.xlsx  EOD_EUGP_20250725_1430.xlsx  EOD_EUGP_20250728_1430.xlsx  EOD_EUGP_20250730_1430.xlsx  EOD_EUGP_20250731_1430.xlsx  EOD_EUGP_20250801_1430.xlsx  EOD_EUGP_20250804_1430.xlsx  EOD_EUGP_20250805_1430.xlsx  EOD_EUGP_20250806_1430.xlsx  EOD_EUGP_20250807_1430.xlsx  EOD_EUGP_20250808_1430.xlsx  EOD_EUGP_20250811_1430.xlsx  EOD_EUGP_20250812_1430.xlsx  (+91 more)
implementations/: external-data-ingestion.md
infra/: external-data-deployment.yaml  optimized-kustomization.yaml
k8s/: aurum-api-deployment.yaml  aurum-worker-deployment.yaml
libs/: __init__.py
migrations/: 002_hardened_scenario_constraints.sql  README.md
notebooks/: iso_validation_template.ipynb  scenario_analysis.ipynb
observability/: audit-logging.md  observability-guide.md  openlineage_emitter.py  slo_dashboard.py  tracing_enhanced.py
openapi/: aurum.generated.yaml  aurum.yaml  miso_spec.pin.json
perf/: README.md  locustfile.py
runbooks/: cache-stampede-runbook.md  disaster-recovery-testing-runbook.md  multi-region-failover-runbook.md  probe-health-checks-playbook.md  schema-drift-runbook.md
scenarios/: smoke.md
scripts/: check_requirements.py  ddl_migration_manager.py  deploy-airflow.sh  deploy-backup-recovery.sh  deploy_noaa_workflow.sh  discover_noaa_stations.py  generate-api-docs.py  generate_clients.py  generate_openapi_diff.py  generate_redoc.py  ingest_daily.py  noaa_station_manager.py  push-images.sh  run_integration_tests.py  sandbox_mock_provider.py  sandbox_runner.py  test_noaa_api.py  test_noaa_dags.py  test_noaa_dags_simple.py
seatunnel/: README.md
security/: secrets-policy.md
src/: start_api.py
storage/: plan.md
tests/: conftest.py  test_caiso_adapter.py  test_lakefs_client.py  test_miso_provider.py  test_pipeline_orchestrator.py
(+1715 files in other folders)
